// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Component allows external props to be added 1`] = `
<WithStyles(HvDialog)
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  onClose={[MockFunction]}
  open={true}
>
  Dialog Content
</WithStyles(HvDialog)>
`;

exports[`Dialog Component allows external styles to be added 1`] = `
<WithStyles(HvDialog)
  classes={
    Object {
      "background": "testClassBackground",
      "closeButton": "testClassCloseButton",
      "paper": "testClassPaper",
      "root": "testClassRoot",
    }
  }
  open={true}
>
  Dialog Content
</WithStyles(HvDialog)>
`;

exports[`Dialog Component should render correctly if closed 1`] = `
<WithStyles(HvDialog)
  onClose={[MockFunction]}
  open={false}
>
  Dialog Content
</WithStyles(HvDialog)>
`;

exports[`Dialog Component should render correctly if opened 1`] = `
<WithStyles(HvDialog)
  onClose={[MockFunction]}
  open={true}
>
  Dialog Content
</WithStyles(HvDialog)>
`;

exports[`Dialog withStyles should render correctly 1`] = `
<WithStyles(HvDialog)>
  Dialog Content
</WithStyles(HvDialog)>
`;
